--- a/app/src/main/res/drawable/et_background_custom.xml
+++ b/app/src/main/res/drawable/et_background_custom.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
    <corners android:radius="18dp"/>
    <stroke android:width="1dp" android:color="@color/black"/>
-   <padding android:bottom="8dp" android:top="8dp"
+   <padding
        android:right="8dp" android:left="8dp"/>
   <size android:height="48dp"></size>
 </shape>
