--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -39,7 +39,7 @@
                     android:textSize="@dimen/text_size_big" />
 
                 <TextView
-                    android:id="@+id/txt_send_code" 
+                    android:id="@+id/txt_send_code"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -69,7 +69,7 @@
                         android:layout_height="52dp"
                         android:background="@android:color/transparent"
                         android:inputType="phone"
-                        android:textColor="@color/yellow"
+                        android:textColor="@color/black"
                         android:textSize="14sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
